overflow fix 2

--- a/personal-site/css/beta-main.css
+++ b/personal-site/css/beta-main.css
@@ -240,9 +240,6 @@ i.material-icons {
 }
 
 @media screen and (max-width: 600px) {
-    .carousel-item{
-        overflow-y: visible;
-    }
 
     #carousel-title {
         margin: 110px 0 10px;
